--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,14 @@
     "name": "php/php-unittest-gyakorlas",
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "squizlabs/php_codesniffer": "*"
+        "squizlabs/php_codesniffer": "*",
+        "php-webdriver/webdriver": "^1.12"
+    },
+    "autoload": {
+      "files": ["src/include_functions.php"],
+      "psr-4": {
+        "App\\": "src/"
+      }
     }
+
 }
